prevent horizontal scrolling when drawer is open
we only need to allow vertical scrolling for pull down to refresh

--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,9 @@
      * https://developers.google.com/web/updates/2016/12/url-bar-resizing
      */
     @apply h-full;
+
+    /* prevent horizontal scrolling, e.g. when drawer is open */
+    @apply overflow-x-hidden;
   }
 
   ::-webkit-scrollbar {
